Bug 312777. Don't pass negative-margin-box floats to the space manager; correct them and preserve the right margin-edge on left floats and the left margin-edge on right floats. r+sr=dbaron